--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
 <h1>{{title}}</h1>
 
-<app-button [color]="btnColor" [text]="btnText"></app-button>
+<app-button [color]="btnColor" [text]="btnText" (btnClick)="toggleAddTask()"></app-button>
 </header>
